After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758295 - xmp: Wrong interpretation of Orientation values 3 and 4
xmp: Wrong interpretation of Orientation values 3 and 4
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: Extractor
1.6.x
Other All
: Normal normal
: ---
Assigned To: tracker-extractor
tracker-extractor
Depends on:
Blocks:
 
 
Reported: 2015-11-18 16:18 UTC by Debarshi Ray
Modified: 2015-11-18 17:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
tracker-extract-xmp: Fix extraction of orientation values 3 and 4 (2.05 KB, patch)
2015-11-18 16:24 UTC, Debarshi Ray
none Details | Review

Description Debarshi Ray 2015-11-18 16:18:55 UTC
The interpretation of Orientation values 3 and 4 have gotten swapped.

See:
http://www.cipa.jp/std/documents/e/DC-010-2012_E.pdf
http://www.sno.phy.queensu.ca/~phil/exiftool/TagNames/XMP.html
Comment 1 Debarshi Ray 2015-11-18 16:24:23 UTC
Created attachment 315841 [details] [review]
tracker-extract-xmp: Fix extraction of orientation values 3 and 4
Comment 2 Debarshi Ray 2015-11-18 17:38:14 UTC
From #tracker on GIMPNet:

16:25 <rishi> garnacho: ssam2: abustany: Filed a couple of nfo:orientation      
      bugs: https://bugzilla.gnome.org/show_bug.cgi?id=758295 and               
      https://bugzilla.gnome.org/show_bug.cgi?id=758293
16:30 <garnacho> rishi, thanks :), the patches look alright to me
Comment 3 Debarshi Ray 2015-11-18 17:41:48 UTC
Pushed to master and tracker-1.6.