tracker-extract-xmp: Fix extraction of orientation values 3 and 4

They had gotten swapped around. See:
http://www.cipa.jp/std/documents/e/DC-010-2012_E.pdf

https://bugzilla.gnome.org/show_bug.cgi?id=758295